# schema-sage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  agents.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
data/training/: demo_text2sql.jsonl
docs/: eval_report.md
schemasage/: config.py  database.py  evaluation.py  generator.py  models.py  schema.py  validator.py
scripts/: evaluate_text2sql.py  prepare_sql_create_context.py  pull_qwen_ollama.sh  scan_secrets.sh  serve.sh  train_lora.py
static/: app.js  index.html  styles.css
tests/: test_api.py  test_database.py  test_generator.py  test_sql_create_context.py  test_training_data.py  test_validator.py
