[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-sage"
version = "0.1.0"
description = "Minimal schema-aware Text2SQL demo with safe SQLite execution."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

lora = [
  "accelerate>=0.30",
  "bitsandbytes>=0.43; platform_system != 'Darwin'",
  "datasets>=2.19",
  "peft>=0.11",
  "torch>=2.2",
  "transformers>=4.41",
]

[tool.setuptools.packages.find]
include = ["schemasage*"]
exclude = [
  "api*",
  "data*",
  "static*",
  "scripts*",
  "tests*",
  "artifacts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
